navbar overlap is fixed by adding padding-bottom in body

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,7 @@
 @import "avatar";
 @import "navbar";
 @import "card";
+
+body {
+  padding-bottom: 40px;
+}
