--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,9 @@
 .navbar-mobile {
-  background-color: $pink ;
+  background-color: $pink;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   display: flex;
   justify-content: space-around;
 
